--- a/architect_website.html
+++ b/architect_website.html
@@ -3,7 +3,10 @@
 	<head>
 		<link rel="stylesheet" href="architect_website.css"/>
 		<title></title>
+		 <meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	</head>
+
 	<body>
 		<div class="header">
 			<div class="navigation-bar">
