--- a/architect_website.html
+++ b/architect_website.html
@@ -11,7 +11,7 @@
 		<div class="header">
 			<div class="navigation-bar">
 				<div class="navigation-container">
-					<a href=""> <b>BR </b>Architects</a>
+					<a href=""> <b>BR </b>Architect</a>
 					<ul>
 						<li><a href="#">Projects</a></li>
 						<li><a href="#">About</a></li>
